refactor: use more idiomatic Go approach
