# docs/swagger.json
@@ -28,9 +28,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "dna"
+                    "nucleotides"
                 ],
-                "summary": "Count DNA bases from a FASTA file",
+                "summary": "Count nucleotides from a FASTA file",
                 "parameters": [
                     {
                         "type": "file",
@@ -44,7 +44,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controllers.BasesCountResponse"
+                            "$ref": "#/definitions/controllers.NucleotideCountResponse"
                         }
                     },
                     "400": {
@@ -72,7 +72,7 @@
                 }
             }
         },
-        "controllers.BasesCountDTO": {
+        "controllers.NucleotideCountDTO": {
             "type": "object",
             "properties": {
                 "A": {
@@ -89,11 +89,11 @@
                 }
             }
         },
-        "controllers.BasesCountResponse": {
+        "controllers.NucleotideCountResponse": {
             "type": "object",
             "properties": {
                 "bases": {
-                    "$ref": "#/definitions/controllers.BasesCountDTO"
+                    "$ref": "#/definitions/controllers.NucleotideCountDTO"
                 },
                 "total": {
                     "type": "integer"
